# ai-playground

./: .gitignore  README.md  pyproject.toml  setup.sh
ai-agent-persistance-and-streaming/: README.md  ai-agent-persistance-and-streaming.ipynb
embedding-heatmap/: README.md  compare_cache.json  compare_embeddings.py
local-llm/: README  local-ai-completion.ipynb
multi-agent-ai/: README  crewai.ipynb
notebook/: ai-agent-1-re-act-agent-from-scratch.ipynb  ai-agent-2-re-act-agent-with-langgraph.ipynb  ai-agent-3-persistence-and-streaming.ipynb  ai-agent-4-human-in-loop.ipynb
react-agent-from-scratch/: ReadMe.md  pyproject.toml  react-agent-from-scratch.ipynb
react-agent-with-langchain/: README.md  pyproject.toml  react-agent-with-langchain.ipynb
react-agent-with-langchain-old/: react-agent-with-langchain.ipynb
vector-database/: chroma-store.py
